# sibdev_job

./: .env.dev  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
app/deals/: apps.py  models.py
app/deals/api/: const.py  paginators.py  serializers.py  urls.py  views.py
app/deals/api/tests/: common.py  factories.py  helpers.py  test_views.py
app/deals/migrations/: 0001_initial.py  0002_rename_gem_deal_item.py  0003_alter_deal_customer_alter_deal_item.py  0004_customer_gems.py  0005_alter_customer_username_alter_gem_name.py
sibdev_job/: asgi.py  const.py  settings.py  urls.py  wsgi.py
